[package]
name = "node_wizard"
version = "0.0.0"
description = "node101"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tauri-cli = "1.3"
tauri = { version = "1.3", features = ["clipboard-all", "dialog-ask", "dialog-confirm", "dialog-message", "http-request", "shell-open", "updater"] }
ssh2 = "0.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
