[package]
name = "wizard"
version = "0.1.1"
description = "A wizard to install and manage nodes on your remote server.."
authors = ["node101"]
license = ""
repository = "https://github.com/node101-io/node-wizard"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tauri-cli = "1.3"
tauri = { version = "1.3", features = ["clipboard-all", "dialog-ask", "dialog-confirm", "dialog-message", "http-request", "shell-open", "updater"] }
ssh2 = "0.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
