[package]
name = "klein"
version = "0.0.0"
description = "A tool to install and manage nodes on your remote server."
authors = ["node101"]
license = ""
repository = "https://github.com/node101-io/klein"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tauri-cli = "1.4"
tauri = { version = "1.4", features = [ "process-all", "clipboard-all", "dialog-ask", "dialog-confirm", "dialog-message", "http-request", "shell-open", "updater", "window-close"] }
ssh2 = "0.9"
nosleep = "0.2.0-rc.1"
ansi-to-html = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
